# sea-codec

./: CHANGELOG.md  Cargo.toml  README.md  app.mjs  codec.wasm  version.mjs  worker.mjs
.github/workflows/: build_cli.yml  build_wasm.yml  test_cli.yml
examples/: bench.rs  seaconv.rs
examples/c_api/: CMakeLists.txt  README.md  main.c
include/: sea_codec.h
src/: c_api.rs  cursor.rs  decoder.rs  encoder.rs  lib.rs  resample.rs  wasm_api.rs
src/codec/: bits.rs  chunk.rs  common.rs  decoder.rs  dqt.rs  encoder_base.rs  encoder_cbr.rs  encoder_vbr.rs  encoder_vbr_beam.rs  file.rs  lms.rs  mod.rs
tests/: streaming.rs  test.rs
web/: .gitignore  app.mjs  build.mjs  index.html  package.json  worker.mjs
