[package]
name = "sea-codec"
version = "0.6.1"
description = "Low-complexity, lossy audio codec designed for embedded devices"
homepage = "https://github.com/Daninet/sea-codec"
repository = "https://github.com/Daninet/sea-codec"
keywords = ["audio", "codec", "encoder", "decoder", "embedded"]
categories = ["multimedia::audio", "multimedia::encoding"]
readme = "README.md"
edition = "2021"
license = "MIT"

[dependencies]
libm = "0.2.15"

[dev-dependencies]
hound = "3.5.1"
clap = "4.5.30"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["wasm-api"]
std = []
wasm-api = ["std"]
c-api = []
